# example_CICD_HW

./: CMakeLists.txt  README.md  main.cpp  test_version.cpp  version.cpp  vpatch.h
.github/workflows/: c-cpp.yml  cmake-single-platform.yml
